# WS_THEbotIT

./: .bandit  .bettercodehub.yml  .codacy.yml  .codeclimate.yml  .codecov.yml  .coveragerc  .dockerignore  .editorconfig  .gitignore  .gitmodules  .pylintrc  .pyup.yml  .travis.yml  .wercker.yml  Dockerfile  LICENSE  Makefile  README.rst  _inactive_appveyor.yml  apply.sh  appveyor.yml  bootstrap.sh  docker-bake.hcl  infrastructure.py  mypy.ini  produce_all_characters_from_unicode.py  pyproject.toml  pywikibot  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  requirements_dev.txt  setup.cfg  snippets.txt  test_the_bot_it.py  tst_runner.py  update_repo.sh
.build/: build.sh  post_script_code_climate.sh  pre_script_code_climate.sh
.circleci/: config.yml
.claude/agents/: ocr-proofreader.md
.dependabot/: config.yml
.github/actions/: dependencies.yml
.github/workflows/: docker_image.yml  integration.yml  integration_test.yml  nightly.yml  quality.yml  test.yml  test_pr.yml  unittest.yml  wikitest.yml
archive/offline/: das_ausland.py
archive/service/: create_magazine.py  test_create_magazine.py  test_pi.py  ws_status.py
infrastructure/: stack.py  test_stack.py
scripts/: .gitignore  runner.py  runner_test.py  starter.sh  starter_test.sh  test_runner.py  tester.py
scripts/authorlist/: authorlist.py
scripts/bots_for_scheduler/: bot_34.py
scripts/build_apps/: 160510_Fkraus_Schutz.py  builder.py  setup.py  user-config.py
scripts/one_time_run/: convert_pnd_to_gnd.py  (+4 more)
service/: author_list.py  finisher.py  poem_list.py  poems.py  protect.py  runner.py  starter.sh  test_author_list.py  test_finisher.py  test_poems.py  test_protect.py
terraform/: common.tf  manage_table.tf  shared_state.tf  terraform.tfvars  variables.tf
test/: __init__.py  all_test.py  all_tests.py  test_project.py
tools/: __init__.py  _typing.py  abbyy_xml.py  bot_scheduler.py  bots.py  bots_scheduler_test.py  catscan.py  date_conversion.py  date_conversion_test.py  little_helpers.py  petscan.py  sort_converter.py  template_expansion.py  template_finder.py  template_handler.py  test.py  test__init__.py  test_bots.py  test_bots_scheduler.py  test_catscan.py  test_date_conversion.json  test_date_conversion.py  test_init.py  test_petscan.py  test_template_expansion.py  test_template_finder.py  test_template_handler.py  test_utils.py  tools.py  user-config.py  utils.py
(+959 files in other folders)
