[project]
name = "ws-thebotit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14, <3.15"
dependencies = [
  "beautifulsoup4==4.15.0",
  "boto3==1.43.49",
  "boto3-stubs[essential]==1.43.49",
  "defusedxml==0.7.1",
  "dictdiffer==0.9.0",
  "GitPython==3.1.51",
  "levenshtein>=0.27.3",
  "oauthlib==3.3.1",
  "pillow>=12.1.0",
  "pywikibot==11.5.0",
  "requests==2.34.2",
  "requests-oauthlib==2.0.0",
  "roman==5.2",
  "wikitextparser==1.0.2",
]

[project.optional-dependencies]
dev = [
  "bandit==1.9.4",
  "beautifulsoup4==4.15.0",
  "codecov==2.1.13",
  "coverage==7.15.2",
  "ddt==1.7.2",
  "freezegun==1.5.5",
  "internetarchive==5.10.1",
  "moto==5.2.2",
  "nose2==0.16.0",
  "patool==4.0.5",
  "pyfiglet==1.0.4",
  "pyyaml==6.0.3",
  "requests-mock==1.12.1",
  "ruff==0.15.22",
  "safety==3.8.1",
  "testfixtures==12.3.0",
  "ty==0.0.62",
  "types-freezegun==1.1.10",
  "types-requests==2.33.0.20260712",
]

[tool.ruff]
line-length = 120
extend-exclude = [
  "archive",
  ".claude",
]

[tool.ruff.lint]
ignore = [
  # E402: module level import not at top of file
  "E402",
]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
exclude = [
  "archive",
  ".claude",
  # test modules are excluded from type checking
  "**/test_*.py",
]
